@@ -40,7 +40,6 @@
 #include "apop.h"
 #include "biff.h"
 #include "socket.h"
-#include "ui-authentication.h"
 #include "nls.h"
 
 
@@ -48,9 +47,6 @@
 //  Static features
 // ========================================================================	
 guint Mailbox::uin_count_ = 1;
-Authentication *Mailbox::ui_auth_ = 0;
-GStaticMutex Mailbox::ui_auth_mutex_ = G_STATIC_MUTEX_INIT;
-
 
 // ========================================================================
 //  base
@@ -60,10 +56,6 @@ Mailbox::Mailbox (Biff *biff)
 	biff_ = biff;
 	listed_ = false;
 	stopped_ = false;
-	g_static_mutex_lock (&ui_auth_mutex_);
-	if (ui_auth_ == 0)
-		ui_auth_ = new Authentication ();
-	g_static_mutex_unlock (&ui_auth_mutex_);
 
 	// Default parameters
 	uin_ = uin_count_++;
