@@ -147,9 +147,6 @@ protected:
 	std::vector<guint>			hidden_;			// mails that won't be displayed
 	std::vector<guint>			seen_;				// mails already seen   
 	std::vector<guint>			new_seen_;			// mails already seen (tmp buffer)
-
-	static class Authentication *ui_auth_;			// ui to get username & password
-	static GStaticMutex			ui_auth_mutex_;		// Lock to avoid conflicts
 	template<class T> static gboolean contains_new (std::vector<T> newlist, std::vector<T> oldlist); // Comparing newlist to oldlist for new elements
 
 public:
